Finaliza implementação de todas as telas